--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   //   padding-top: 5rem;
   overflow-x: hidden;
+  
 
   @media (min-width: 25em) {
     top: 3%;
@@ -123,6 +124,7 @@
       &:before {
         content: counter(section);
         position: absolute;
+        top: 40%;
         border-radius: 50%;
         padding: 10px;
         height: 2.5em;
@@ -233,4 +235,8 @@
       }
     }
   }
+}
+
+.about canvas {
+  position: absolute;
 }
