--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -8,6 +8,7 @@
   align-items: center;
   height: 100%;
   overflow-x: hidden;
+  padding-bottom: 2rem;
 
   &__heading {
     padding: 1rem;
@@ -28,25 +29,39 @@
     overflow: hidden;
     border-radius: 25px;
     width: 300px;
-    margin: 1rem 2rem 1rem 2rem;
-
+    margin: 1rem 4rem 4rem 4rem;
+    // border: 1px solid green;
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
+      box-shadow: 30px 27px 61px 29px rgba(0, 0, 0, 0.78);
+      -webkit-box-shadow: 30px 27px 61px 29px rgba(0, 0, 0, 0.78);
+      -moz-box-shadow: 30px 27px 61px 29px rgba(0, 0, 0, 0.78);
+    }
   }
 
   &__header {
     height: 200px;
-
+    
     &--img {
       object-fit: cover;
       height: 100%;
       width: 100%;
       border-radius: 25px;
+      &:hover,
+      &:focus {
+       box-shadow: 1px 50px 48px -26px rgba(210,4,45,0.78);
+-webkit-box-shadow: 1px 50px 48px -26px rgba(210,4,45,0.78);
+-moz-box-shadow: 1px 50px 48px -26px rgba(210,4,45,0.78);
+      }
     }
   }
-
+  
   &__content {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-inline: 0.8rem;
     align-items: center;
 
     &--title {
